--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
   </head>
   <body>
 
+<header>
+  <h2>POKEDEX</h2>
+</header>
+
     <main class="container">
       <form id="form_main">
-        <div class="form">
+        <div class="form-title">
           <label for="form__principal">Ingresa un Pokemón</label>
-          <input type="input" class="form-control" id="form__principal" aria-describedby="emailHelp">
+        </div>
+        <div class="form-control">
+          <input type="input" id="form__principal" aria-describedby="emailHelp">
         </div>
   
-        <section id="section__boton">
-          <button class="btn btn-primary boton">Buscar</button>
+        <section id="section__button">
+          <button class="btn btn-primary button">Buscar</button>
         </section>
       </form>
   
