--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!--Canvas JS-->
     <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
-    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>    
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>   
+
     <link  rel="icon"   href="assets/img/favicon.png" type="image/png" />
     <!-- Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -27,14 +28,14 @@
 
 <body>
 
-  <h1>POKEDEX</h1>
+  <h1 class="titulo">POKEDEX</h1>
  <main class="hero-image">
      
      <section id="buscador_pokemon">
          <form class="main__form-1 form-inline" id="form-poke-id">  
              <div class="form-group">                 
                  <label class="form-1__name" for="nombre">Buscador de Pokemones</label>
-                 <input class="form-1__imput" type="text" name="nombre" id="nombre"  placeholder="Ingrese nombre o número Pokemon" class="form-1__imput">
+                 <input class="form-1__imput" type="text" name="nombre" id="nombre"  placeholder="Ingrese nombre o número" class="form-1__imput">
              </div>
              <div class="form-group align-self-end"></div>
                  <button type="button" class="btn btn-danger btn-lg"><i class="fas fa-search" id="consultarNumero"></i></button>
@@ -91,7 +92,7 @@
 
 
 
-<!-- Mi script -->
+<!-- Script -->
     <script src="script.js"></script>
   </body>
 </html>
