--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--Mi estilo-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!--Font Awesome 5.6.3 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <title>Pokedex</title>
@@ -28,7 +28,7 @@
 
 <body>
 
-  <h1 class="titulo">POKEDEX</h1>
+  <h1 class="titulo"><strong>POKEDEX</strong></h1>
  <main class="hero-image">
      
      <section id="buscador_pokemon">
@@ -93,6 +93,6 @@
 
 
 <!-- Script -->
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
